--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,14 @@ html, body {
 .image, .userForm {
     width: 50%;
     position: relative;
+    height: 100%;
+}
+
+.odinLogo{
+    width: 15%;
+    position: absolute;
+    top: 30px;
+    left: 40%;
 }
 
 .image img {
@@ -27,19 +35,23 @@ html, body {
 }
 
 .userForm form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
 
 .formBox {
-    background-color: rgb(244, 248, 248);
+    background-color: rgb(255, 255, 255);
     padding: 30px;
-    box-shadow: 10px 5px 5px black;
+    box-shadow: 10px 1px 12px black;
 }
 
 input {
     margin: 10px 0;
+}
+
+form label, form input {
+    width: 70%;
 }
 
 button {
@@ -60,10 +72,14 @@ h3 {
 a{
     color: white;
 }
+.login {
+    color: black;
+}
 
 .labelAuthor{
-    color: white;
     position: absolute;
-    left: 0;
-    bottom: 0;
+    bottom: 10px;
+    left: 30%;
+    color: white;
 }
+
