--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html, body {
 }
 
 .container {
+    height: 100%;
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -35,27 +36,36 @@ html, body {
 }
 
 .userForm form {
+    margin-top: 30%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    column-gap: 20px;
+    row-gap: 1px;
+    width: 100%;
+    padding-right: 20px;
 }
 
 .formBox {
     background-color: rgb(255, 255, 255);
-    padding: 30px;
+    padding: 35px;
     box-shadow: 10px 1px 12px black;
+    width: 100%;
+}
+
+label {
+    text-align: left;
+    grid-column: span 1;
 }
 
 input {
-    margin: 10px 0;
-}
-
-form label, form input {
-    width: 70%;
+    width: 90%;
+    grid-column: span ;
 }
 
 button {
     margin-top: 20px;
+    grid-column: span 1;
+    width: 100%;
 }
 
 h1, h3 {
@@ -74,6 +84,10 @@ a{
 }
 .login {
     color: black;
+}
+
+label {
+    position: relative;
 }
 
 .labelAuthor{
